Calculation of isoperimetric constant

--- a/zig-zag.ipynb
+++ b/zig-zag.ipynb
@@ -864,7 +864,7 @@
     "        for i in subset:\n",
     "            edge_bound.update(adjacency_table[i].difference(subset))\n",
     "    \n",
-    "        isoperimetric_num = min(isoperimetric_num, len(set(edge_bound)) / len(subset))\n",
+    "        isoperimetric_num = min(isoperimetric_num, len(edge_bound) / len(subset))\n",
     "        \n",
     "    return isoperimetric_num"
    ]
