Added gap of normalized Laplacian matrix

--- a/zig-zag.ipynb
+++ b/zig-zag.ipynb
@@ -709,18 +709,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ebc1f29f-ec9d-4818-8705-887669193098",
+   "metadata": {},
+   "source": [
+    "#### Матрица Лапласа: $L = D - A$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 379,
+   "id": "314030d6-9e57-4300-afe8-1da92f20b388",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.  0.  0. -1. -1.  0.  0.  0.  0. -1.  0. -1.]\n",
+      " [ 0.  4.  0.  0.  0.  0. -1. -1.  0. -1.  0. -1.]\n",
+      " [ 0.  0.  4. -1. -1.  0. -1. -1.  0.  0.  0.  0.]\n",
+      " [-1.  0. -1.  4.  0.  0.  0.  0.  0.  0. -1. -1.]\n",
+      " [-1.  0. -1.  0.  4.  0.  0. -1. -1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  4.  0. -1. -1.  0. -1. -1.]\n",
+      " [ 0. -1. -1.  0.  0.  0.  4.  0.  0. -1. -1.  0.]\n",
+      " [ 0. -1. -1.  0. -1. -1.  0.  4.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0. -1. -1.  0.  0.  4. -1. -1.  0.]\n",
+      " [-1. -1.  0.  0.  0.  0. -1.  0. -1.  4.  0.  0.]\n",
+      " [ 0.  0.  0. -1.  0. -1. -1.  0. -1.  0.  4.  0.]\n",
+      " [-1. -1.  0. -1.  0. -1.  0.  0.  0.  0.  0.  4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.laplacian_matrix(zig_zag).toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
    "id": "4a4dd4be-fec5-4ce9-945b-222671825aed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6096117967977926"
+       "2.4384471871911715"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 384,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algebraic_connectivity(zig_zag)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "571aa644-5243-4e6e-acfa-9f7477cb7128",
+   "metadata": {},
+   "source": [
+    "#### Нормализованная матрица Лапласа: $N = D^{-1/2}LD^{-1/2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "id": "4ce612eb-4951-4a6f-87e7-79bbed62cb56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.    0.    0.   -0.25 -0.25  0.    0.    0.    0.   -0.25  0.   -0.25]\n",
+      " [ 0.    1.    0.    0.    0.    0.   -0.25 -0.25  0.   -0.25  0.   -0.25]\n",
+      " [ 0.    0.    1.   -0.25 -0.25  0.   -0.25 -0.25  0.    0.    0.    0.  ]\n",
+      " [-0.25  0.   -0.25  1.    0.    0.    0.    0.    0.    0.   -0.25 -0.25]\n",
+      " [-0.25  0.   -0.25  0.    1.    0.    0.   -0.25 -0.25  0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    1.    0.   -0.25 -0.25  0.   -0.25 -0.25]\n",
+      " [ 0.   -0.25 -0.25  0.    0.    0.    1.    0.    0.   -0.25 -0.25  0.  ]\n",
+      " [ 0.   -0.25 -0.25  0.   -0.25 -0.25  0.    1.    0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.   -0.25 -0.25  0.    0.    1.   -0.25 -0.25  0.  ]\n",
+      " [-0.25 -0.25  0.    0.    0.    0.   -0.25  0.   -0.25  1.    0.    0.  ]\n",
+      " [ 0.    0.    0.   -0.25  0.   -0.25 -0.25  0.   -0.25  0.    1.    0.  ]\n",
+      " [-0.25 -0.25  0.   -0.25  0.   -0.25  0.    0.    0.    0.    0.    1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.normalized_laplacian_matrix(zig_zag).toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "id": "0a4e0dba-052f-45af-900c-da01bd4474bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.609611796797793"
+      ]
+     },
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,6 +824,14 @@
     "lambd = nx.algebraic_connectivity(zig_zag, normalized=True)\n",
     "lambd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9135d688-c6b4-4a08-b8be-48ef199356b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -851,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 362,
    "id": "16295dad-fe24-4853-b323-5a35934d990f",
    "metadata": {},
    "outputs": [],
@@ -860,9 +963,9 @@
     "    isoperimetric_num = np.inf\n",
     "\n",
     "    for subset in subsets:\n",
-    "        edge_bound = set()\n",
+    "        edge_bound = list()\n",
     "        for i in subset:\n",
-    "            edge_bound.update(adjacency_table[i].difference(subset))\n",
+    "            edge_bound.extend(list(adjacency_table[i].difference(subset)))\n",
     "    \n",
     "        isoperimetric_num = min(isoperimetric_num, len(edge_bound) / len(subset))\n",
     "        \n",
@@ -879,17 +982,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 363,
    "id": "dabda34b-e68b-4e9d-ab5d-a4fdcbacb113",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "2.0"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 364,
    "id": "24d863fa-77ec-412b-bec8-0625d36f88f0",
    "metadata": {},
    "outputs": [],
@@ -919,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 365,
    "id": "082e115e-b8d2-4421-99d6-028f9e2d6648",
    "metadata": {},
    "outputs": [],
@@ -929,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 366,
    "id": "2a896801-5f7b-4c5f-aaa9-ccccb528aaf2",
    "metadata": {},
    "outputs": [
@@ -939,7 +1042,7 @@
        "2.0"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 367,
    "id": "c1c4c0e8-d751-4401-8585-40d4dab44221",
    "metadata": {},
    "outputs": [],
@@ -969,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 368,
    "id": "0c1d503e-65cb-4377-bb65-3ffbf5bf569d",
    "metadata": {},
    "outputs": [],
@@ -979,17 +1082,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 369,
    "id": "0435e462-ebf4-4407-bff3-b54ba68bfdea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8333333333333334"
+       "1.3333333333333333"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
