add gamma and alpha choosing for coding

--- a/zig-zag.ipynb
+++ b/zig-zag.ipynb
@@ -729,6 +729,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afe3e773-de36-4d78-b08e-e820132d24ba",
+   "metadata": {},
+   "source": [
+    "### Из списка параметров $\\gamma$ и $\\alpha$ при $\\epsilon < 1/4$ выбираем оптимальные параметры, подходящие под граничное условие"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "0457a4ba-acdc-4b9a-867f-257a8b392e47",
